# birdwatch-flanders

./: .gitignore  LICENCE  README.md  pyproject.toml  trentino_aggregation.qgz
data/: hedges_normalized.tiff  merged.tiff
data_trentino/: Birdwatch_Trentino_LAFIS_aggregate_QGIS_conditional_expression.txt  arg_automate.py
output/: merged.tif  merged.tif.aux.xml
qgis/: birdwatch_flanders_main.qgz  merged_landuse_symbology.qml
src/: merge_tiffs.py  validate_tiff.py
