[tool.poetry]
name = "birdwatch-flanders"
version = "0.1.0"
description = ""
authors = ["Juraj Zvolensky <juro.zvolensky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
rasterio = "^1.3.10"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
